Fixed search box on mobile

--- a/app/css/_store.css.scss
+++ b/app/css/_store.css.scss
@@ -19,13 +19,28 @@
     .input-group{
       margin: 10px auto;
       border-left: 4px solid $pt-green;
+      @media (max-width: $screen-phone-max) {
+        width: 100%;  
+      }
       input, a.btn{
         border-radius: 0;
+      }
+      .input-group-btn{
+        @media (max-width: $screen-phone-max) {
+          display:inline;
+          a.btn{
+            display:block;
+          }
+        }
       }
       a.btn{
         font-size:3em;
         border-color:$pt-green;
         font-weight: 500;
+        @media (min-width: $screen-tablet) and (max-width: $screen-tablet-max) {
+          line-height:3.97em;
+          font-size:1em;
+        }
       }
       input{
         height: 77px;
